migrate to LangChain4j